名侦探柯南

--- a/主线2.html
+++ b/主线2.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <h1>主线篇2</h1>
+    <img src="../mztkn/图片/主线2.jpg">
     <p>第918-919集 灵魂侦探凶杀案
         <br>第921-922集 背叛的舞台
         <br>第933-934集 试衣间的死角
@@ -17,6 +18,6 @@
         <br>第949-950集 隔壁的江户式推理秀
         <br>
     </p>
-    <h2><a href="../mztkn/主线1.html">上一页</a><a href="../mztkn/剧场版.html">返回</a></h2>
+    <h2><a href="../mztkn/主线1.html">上一页</a>   <a href="../mztkn/名侦探柯南.html">返回</a></h2>
 </body>
 </html>
