--- a/新一.html
+++ b/新一.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <h1>新一篇</h1>
+    <img src="../mztkn/图片/新一.jpg">
     <p>第49-50集 外交官杀人事件
         <br>第172-173集 飞天密室 工藤新一 最初的事件
         <br>第268-269集 偶像的秘密*
