--- a/柯哀1.html
+++ b/柯哀1.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <h1>柯哀1</h1>
+    <img src="../mztkn/图片/柯哀1.png">
     <p>第140-141集 竞技场一视同仁事件
         <br>第146-147集 蓝色古堡探索事件
         <br>第148-149集 最终播映杀人事件
