--- a/名侦探柯南.html
+++ b/名侦探柯南.html
@@ -9,19 +9,14 @@
 </head>
 <body>
     <h1>名侦探柯南</h1>
-    <h2><a href="../mztkn/主线1.html">主线篇</a></h2>
+    <img src="../mztkn/图片/名侦探柯南.jpg">
+    <h2><a href="../mztkn/主线1.html">主线篇</a>                  <a href="../mztkn/基德.html">基德篇</a></h2>
     <br>
-    <h2><a href="../mztkn/基德.html">基德篇</a></h2>
+    <h2><a href="../mztkn/平次.html">平次篇</a>                  <a href="../mztkn/恐怖.html">恐怖篇</a></h2>
     <br>
-    <h2><a href="../mztkn/平次.html">平次篇</a></h2>
+    <h2><a href="../mztkn/新一.html">新一篇</a>                  <a href="../mztkn/柯哀1.html">柯哀篇</a></h2>
     <br>
-    <h2><a href="../mztkn/恐怖.html">恐怖篇</a></h2>
-    <br>
-    <h2><a href="../mztkn/新一.html">新一篇</a></h2>
-    <br>
-    <h2><a href="../mztkn/柯哀1.html">柯哀篇</a></h2>
-    <br>
-    <h2><a href="../mztkn/剧场版.html">剧场版</a></h2>
+    <h2><a href="../mztkn/剧场版.html">剧场版</a>                  </h2>
     <br>
 </body>
 </html>
