名侦探柯南默示录

--- a/主线1.html
+++ b/主线1.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <h1>主线篇1</h1>
-    <img src="../mztkn/图片/主线1.jpg">
+    <img src="../mztkn/images/主线1.jpg">
     <p>第1集 云霄飞车杀人事件
         <br>第2集 董事长千金绑架事件
         <br>第5集 新干线大爆破事件
