--- a/主线2.html
+++ b/主线2.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <h1>主线篇2</h1>
-    <img src="../mztkn/图片/主线2.jpg">
+    <img src="../mztkn/images/主线2.jpg">
     <p>第918-919集 灵魂侦探凶杀案
         <br>第921-922集 背叛的舞台
         <br>第933-934集 试衣间的死角
