--- a/剧场版.html
+++ b/剧场版.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <h1>剧场版</h1>
-    <img src="../mztkn/图片/剧场.jpg">
+    <img src="../mztkn/images/剧场.jpg">
     <p>第1集 计时引爆摩天楼
         <br>第2集 第十四个目标
         <br>第3集 世纪末的魔术师
