--- a/基德.html
+++ b/基德.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <h1>基德篇</h1>
-    <img src="../mztkn/图片/基德.jpg">
+    <img src="../mztkn/images/基德.jpg">
     <p>第78-79集 柯南对怪盗基德
         <br>第142-144集 魔术爱好杀人事件
         <br>第235-238集 被召集的名侦探
