--- a/平次.html
+++ b/平次.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <h1>平次篇</h1>
-    <img src="../mztkn/图片/平次.jpg">
+    <img src="../mztkn/images/平次.jpg">
     <p>第49-50集 外交官杀人事件
         <br>第59-60集 福尔摩斯迷杀人事件
         <br>第80-81集 名家连续惨死事件
