--- a/恐怖.html
+++ b/恐怖.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <h1>恐怖篇</h1>
-    <img src="../mztkn/图片/恐怖.png">
+    <img src="../mztkn/images/恐怖.png">
     <p>第11-12集 钢琴奏鸣曲《月光》杀人事件
         <br>第21集 鬼屋杀人事件
         <br>第35-36集 山庄绷带怪人之杀人事件
