--- a/名侦探柯南.html
+++ b/名侦探柯南.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <h1>名侦探柯南</h1>
-    <img src="../mztkn/图片/名侦探柯南.jpg">
+    <img src="../mztkn/images/名侦探柯南.jpg">
     <h2><a href="../mztkn/主线1.html">主线篇</a>                  <a href="../mztkn/基德.html">基德篇</a></h2>
     <br>
     <h2><a href="../mztkn/平次.html">平次篇</a>                  <a href="../mztkn/恐怖.html">恐怖篇</a></h2>
