--- a/名侦探柯南.html
+++ b/名侦探柯南.html
@@ -9,14 +9,17 @@
 </head>
 <body>
     <h1>名侦探柯南</h1>
-    <img src="../mztkn/images/名侦探柯南.jpg">
-    <h2><a href="../mztkn/主线1.html">主线篇</a>                  <a href="../mztkn/基德.html">基德篇</a></h2>
+    <h3>影片简介</h3>
+        <img src="../mztkn/images/名侦探柯南.jpg">
+    <p>
+            高中生侦探工藤新一，被称为“日本警察的救世主”、“平成年代的福尔摩斯”。一次在与青梅竹马的女友毛利兰去游乐园游玩时，
+        发现两个行动诡异的黑衣人。新一跟踪他们直到交易现场，另一个黑衣人趁其不注意从后面将他一棒击倒，并灌下一种名为APTX4869的神秘毒药企图杀他灭口，
+        但因为副作用他的身体竟回到发育期的孩童状态。考虑到要是黑衣人知道他还活着的话，父将使周围的亲朋好友受到牵连，于是新一化名为“江户川柯南”，
+        寄住在毛利兰的家中，想借助其父亲、担任侦探的毛利小五郎的力量来找寻黑衣人。
+    </p>
+    <h2><a href="../mztkn/主线1.html">主线篇</a>   <a href="../mztkn/基德.html">基德篇</a>   <a href="../mztkn/平次.html">平次篇</a>   <a href="../mztkn/恐怖.html">恐怖篇</a></h2>
     <br>
-    <h2><a href="../mztkn/平次.html">平次篇</a>                  <a href="../mztkn/恐怖.html">恐怖篇</a></h2>
-    <br>
-    <h2><a href="../mztkn/新一.html">新一篇</a>                  <a href="../mztkn/柯哀1.html">柯哀篇</a></h2>
-    <br>
-    <h2><a href="../mztkn/剧场版.html">剧场版</a>                  </h2>
+    <h2><a href="../mztkn/新一.html">新一篇</a>   <a href="../mztkn/柯哀1.html">柯哀篇</a>   <a href="../mztkn/剧场版.html">剧场版</a></h2>
     <br>
 </body>
 </html>
