--- a/柯哀2.html
+++ b/柯哀2.html
@@ -1,18 +1,35 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>名侦探柯南</title>
-    <link type="text/css" rel="stylesheet" href="../mztkn/名侦探柯南.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>名侦探柯南</title>
 </head>
 <body>
-    <h1>柯哀2</h1>
-    <img src="../mztkn/images/柯哀2.png">
-    <p>第926集 信长450周年事件
-        <br>
-    </p>
-    <h2><a href="../mztkn/柯哀1.html">上一页</a>   <a href="../mztkn/名侦探柯南.html ">返回</a></h2>
+  <p>柯哀2</p>
+  <p>第516-517集 元太的必杀球
+    <br>第524-525集 山药婆婆的利刃
+    <br>第526集 消失的巡警
+    <br>第593-594集 鱼儿消失的一角岩
+    <br>第608集 危险的二人组
+    <br>第648-649集 蒸汽密室的剧本
+    <br>第665-666集 日记奏出的秘密
+    <br>第721-722集 黑暗塔的宝藏
+    <br>第727-728集 一丁点儿都不原谅
+    <br>第772-773集 火与水的神秘旅行
+    <br>第774-775集 又甜又冰的宅急便
+    <br>第818-819集 堤无津川放风筝事件
+    <br>第821集 灰原哀监禁事件
+    <br>第852集 侦探团的密室推理比赛
+    <br>第856集 注意防火的陷阱
+    <br>第857-860集 歌舞伎十八番之谜
+    <br>第877-878集 嫌疑犯是热恋情侣
+    <br>第879集 躲雨的少年侦探团
+    <br>第898-899集 不明真相的侦探团
+    <br>第900-901集 黑暗中陷入绝境的柯南
+    <br>第914集 漆黑的登山路线
+    <br>第924集 消失在断崖上的柯南
+    <h2><a href="../mztkn/柯哀1.html">上一页</a>   <a href="../mztkn/名侦探柯南.html ">返回</a>   <a href="../mztkn/柯哀3.html">下一页</a></h2>
 </body>
 </html>
