--- a/主线2.html
+++ b/主线2.html
@@ -1,23 +1,41 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>名侦探柯南</title>
-    <link type="text/css" rel="stylesheet" href="../mztkn/名侦探柯南.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>名侦探柯南</title>
+  <link type="text/css" rel="stylesheet" href="../mztkn/名侦探柯南.css">
 </head>
 <body>
-    <h1>主线篇2</h1>
-    <img src="../mztkn/images/主线2.jpg">
-    <p>第918-919集 灵魂侦探凶杀案
-        <br>第921-922集 背叛的舞台
-        <br>第933-934集 试衣间的死角
-        <br>第936-937集 涟漪上的魔法师
-        <br>第944-945集 新老师的骸骨事件
-        <br>第949-950集 隔壁的江户式推理秀
-        <br>
+  <h1>主线2</h1>
+    <p>第459-463集 黑色冲击！组织之手逼近的瞬间
+      <br>第502-502集 黑暗组织之影
+      <br>第527-528集 黑色相片的下落
+      <br>第538-551集 红与黑的撞击
+      <br>第556-558集 红白黄色和侦探团
+      <br>第614-615集 侦探团VS抢匪团
+      <br>第629-632集 红色&黑色
+      <br>第667-672集 福尔摩斯默示录
+      <br>第697-698集 幽灵饭店的推理对决
+      <br>第699-701集 侦探事务所挟持事件
+      <br>第708-709集 博士的影音网站
+      <br>第719-720集 婚礼前夕
+      <br>第723-726集 侦探们的夜想曲
+      <br>第751-752集 迫近灰原秘密的黑影
+      <br>第753-756集 漆黑的神秘列车
+      <br>第757-758集 柯南&波本
+      <br>第786-787集 茱蒂的追忆与赏花的陷阱
+      <br>第793-794集 小兰也倒在浴室里了
+      <br>第823-824集 气氛僵硬的茶会
+      <br>第832-836集 绯色的故事
+      <br>第840-841集 盛夏里沉入泳池的迷
+      <br>第845-846集 三名第一发现人
+      <br>第868集 悄悄靠近安室的黑影
+      <br>第865-867集 县警的黑暗
+      <br>第891-892集 关系恶劣的女子乐队
+      <br>第916-917集 与17年前一样的案发现场
     </p>
-    <h2><a href="../mztkn/主线1.html">上一页</a>   <a href="../mztkn/名侦探柯南.html">返回</a></h2>
+    <h2><a href="../mztkn/主线1.html">上一页</a>   <a href="../mztkn/名侦探柯南.html ">返回</a>   <a href="../mztkn/主线2.html">下一页</a></h2>
 </body>
 </html>
