--- a/柯哀2.html
+++ b/柯哀2.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>名侦探柯南</title>
+  <link type="text/css" rel="stylesheet" href="../mztkn/名侦探柯南.css">
 </head>
 <body>
   <p>柯哀2</p>
