--- a/主线2.html
+++ b/主线2.html
@@ -9,6 +9,7 @@
 </head>
 <body>
   <h1>主线2</h1>
+  <img src="../mztkn/images/主线2.jpg">
     <p>第459-463集 黑色冲击！组织之手逼近的瞬间
       <br>第502-502集 黑暗组织之影
       <br>第527-528集 黑色相片的下落
@@ -35,6 +36,7 @@
       <br>第865-867集 县警的黑暗
       <br>第891-892集 关系恶劣的女子乐队
       <br>第916-917集 与17年前一样的案发现场
+      <br>
     </p>
     <h2><a href="../mztkn/主线1.html">上一页</a>   <a href="../mztkn/名侦探柯南.html ">返回</a>   <a href="../mztkn/主线3.html">下一页</a></h2>
 </body>
