--- a/平次1.html
+++ b/平次1.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <h1>平次篇</h1>
-    <img src="../mztkn/images/平次.jpg">
+    <img src="../mztkn/images/平次1.jpg">
     <p>第49-50集 外交官杀人事件
         <br>第59-60集 福尔摩斯迷杀人事件
         <br>第80-81集 名家连续惨死事件
@@ -35,10 +35,8 @@
         <br>第762-763集 大家都看见了
         <br>第764-767集 服部平次与吸血鬼公馆
         <br>第816-817集 柯南与平次恋爱的暗号
-        <br>第927-929集 柯南与平次的夜鸟传说
-        <br>第940-941集 在白罗咖啡馆解密
         <br>
     </p>
-    <h2><a href="../mztkn/名侦探柯南.html ">返回</a></h2>
+    <h2><a href="../mztkn/名侦探柯南.html ">返回</a>   <a href="../mztkn/平次2.html">下一页</a></h2>
 </body>
 </html>
