--- a/柯哀2.html
+++ b/柯哀2.html
@@ -9,6 +9,7 @@
 </head>
 <body>
   <p>柯哀2</p>
+  <img src="../mztkn/images/柯哀2.png">
   <p>第516-517集 元太的必杀球
     <br>第524-525集 山药婆婆的利刃
     <br>第526集 消失的巡警
@@ -31,6 +32,7 @@
     <br>第900-901集 黑暗中陷入绝境的柯南
     <br>第914集 漆黑的登山路线
     <br>第924集 消失在断崖上的柯南
+    <br>
     <h2><a href="../mztkn/柯哀1.html">上一页</a>   <a href="../mztkn/名侦探柯南.html ">返回</a>   <a href="../mztkn/柯哀3.html">下一页</a></h2>
 </body>
 </html>
