--- a/名侦探柯南.html
+++ b/名侦探柯南.html
@@ -17,7 +17,7 @@
         但因为副作用他的身体竟回到发育期的孩童状态。考虑到要是黑衣人知道他还活着的话，父将使周围的亲朋好友受到牵连，于是新一化名为“江户川柯南”，
         寄住在毛利兰的家中，想借助其父亲、担任侦探的毛利小五郎的力量来找寻黑衣人。
     </p>
-    <h2><a href="../mztkn/主线1.html">主线篇</a>   <a href="../mztkn/基德.html">基德篇</a>   <a href="../mztkn/平次.html">平次篇</a>   <a href="../mztkn/恐怖.html">恐怖篇</a></h2>
+    <h2><a href="../mztkn/主线1.html">主线篇</a>   <a href="../mztkn/基德.html">基德篇</a>   <a href="../mztkn/平次1.html">平次篇</a>   <a href="../mztkn/恐怖.html">恐怖篇</a></h2>
     <br>
     <h2><a href="../mztkn/新一.html">新一篇</a>   <a href="../mztkn/柯哀1.html">柯哀篇</a>   <a href="../mztkn/剧场版.html">剧场版</a></h2>
     <br>
