--- a/平次2.html
+++ b/平次2.html
@@ -8,11 +8,12 @@
     <link type="text/css" rel="stylesheet" href="../mztkn/名侦探柯南.css">
 </head>
 <body>
-    <h1>柯哀3</h1>
-    <img src="../mztkn/images/柯哀3.png">
-    <p>第926集 信长450周年事件
+    <h1>平次篇2</h1>
+    <img src="../mztkn/images/平次2.jpg">
+    <p>第927-929集 柯南与平次的夜鸟传说
+        <br>第940-941集 在白罗咖啡馆解密
         <br>
     </p>
-    <h2><a href="../mztkn/柯哀2.html">上一页</a>   <a href="../mztkn/名侦探柯南.html ">返回</a></h2>
+    <h2><a href="../mztkn/平次1.html ">上一页</a>   <a href="../mztkn/名侦探柯南.html">下返回</a></h2>
 </body>
 </html>
