--- a/名侦探柯南.html
+++ b/名侦探柯南.html
@@ -6,6 +6,25 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>名侦探柯南</title>
     <link type="text/css" rel="stylesheet" href="../mztkn/名侦探柯南.css">
+    <style>
+        p {
+           background-color: #c9cccc;
+           margin-left: 20%;
+           margin-right: 20%;
+           border: 2px solid black;
+           padding: 10px 10px 10px 10px;
+           font-family: sans-serif;
+           padding: 25px;
+           margin: 30px;
+           text-indent: 2em;
+        }
+        p,h2 {
+            text-indent: 2em;
+        }
+        h3 {
+            text-indent: 6em;
+        }
+    </style>
 </head>
 <body>
     <h1>名侦探柯南</h1>
@@ -17,9 +36,12 @@
         但因为副作用他的身体竟回到发育期的孩童状态。考虑到要是黑衣人知道他还活着的话，父将使周围的亲朋好友受到牵连，于是新一化名为“江户川柯南”，
         寄住在毛利兰的家中，想借助其父亲、担任侦探的毛利小五郎的力量来找寻黑衣人。
     </p>
-    <h2><a href="../mztkn/主线1.html">主线篇</a>   <a href="../mztkn/基德.html">基德篇</a>   <a href="../mztkn/平次1.html">平次篇</a>   <a href="../mztkn/恐怖.html">恐怖篇</a></h2>
-    <br>
-    <h2><a href="../mztkn/新一.html">新一篇</a>   <a href="../mztkn/柯哀1.html">柯哀篇</a>   <a href="../mztkn/剧场版.html">剧场版</a></h2>
-    <br>
+    <h2><a href="../mztkn/主线1.html">主线篇</a></h2><h3>*黑暗组织</h3>   
+    <h2><a href="../mztkn/基德.html">基德篇</a></h2><h3>*怪盗基德</h3>
+    <h2><a href="../mztkn/平次1.html">平次篇</a></h2><h3>*服部平次</h3>
+    <h2><a href="../mztkn/恐怖.html">恐怖篇</a></h2><h3>*惊悚恐怖</h3>
+    <h2><a href="../mztkn/新一.html">新一篇</a></h2><h3>*工藤新一</h3>
+    <h2><a href="../mztkn/柯哀1.html">柯哀篇</a></h2><h3>*柯哀王道</h3>
+    <h2><a href="../mztkn/剧场版.html">剧场版</a></h2><h3>*电影剧场</h3>
 </body>
 </html>
