--- a/名侦探柯南.html
+++ b/名侦探柯南.html
@@ -8,7 +8,7 @@
     <link type="text/css" rel="stylesheet" href="../mztkn/名侦探柯南.css">
     <style>
         p {
-           background-color: #c9cccc;
+           background-color: #e9ebeb;
            margin-left: 20%;
            margin-right: 20%;
            border: 2px solid black;
