--- a/名侦探柯南.html
+++ b/名侦探柯南.html
@@ -17,6 +17,8 @@
            padding: 25px;
            margin: 30px;
            text-indent: 2em;
+           border-style: dotted;
+           border-radius: 15px;
         }
         p,h2 {
             text-indent: 2em;
