--- a/名侦探柯南.html
+++ b/名侦探柯南.html
@@ -19,33 +19,37 @@
            text-indent: 2em;
            border-style: dotted;
            border-radius: 15px;
+           background-color: rgba(226, 225, 225, 0.5);
         }
         p,h2 {
             text-indent: 2em;
         }
-        h3 {
-            text-indent: 6em;
+        h2 {
+            float: left;
         }
-        h4 {
-            padding-left: 100px;
+        h3 {
+            text-indent: 2em;
         }
     </style>
 </head>
 <body>
     <h1>名侦探柯南</h1>
     <p>
-            高中生侦探工藤新一，被称为“日本警察的救世主”、“平成年代的福尔摩斯”。一次在与青梅竹马的女友毛利兰去游乐园游玩时，
-        发现两个行动诡异的黑衣人。新一跟踪他们直到交易现场，另一个黑衣人趁其不注意从后面将他一棒击倒，并灌下一种名为APTX4869的神秘毒药企图杀他灭口，
-        但因为副作用他的身体竟回到发育期的孩童状态。考虑到要是黑衣人知道他还活着的话，将使周围的亲朋好友受到牵连，于是新一化名为“江户川柯南”，
-        寄住在毛利兰的家中，想借助其父亲、担任侦探的毛利小五郎的力量来找寻黑衣人。
+        高中生侦探工藤新一，被称为“日本警察的救世主”、“平成年代的福尔摩斯”。一次在与青梅竹马的女友毛利兰去游乐园游玩时，
+    发现两个行动诡异的黑衣人。新一跟踪他们直到交易现场，另一个黑衣人趁其不注意从后面将他一棒击倒，并灌下一种名为APTX4869的神秘毒药企图杀他灭口，
+    但因为副作用他的身体竟回到发育期的孩童状态。考虑到要是黑衣人知道他还活着的话，将使周围的亲朋好友受到牵连，于是新一化名为“江户川柯南”，
+    寄住在毛利兰的家中，想借助其父亲、担任侦探的毛利小五郎的力量来找寻黑衣人。
     </p>
-    <h2><a href="../mztkn/知识.html">名侦探柯南每集都有可怕的知识</a></h2><h4><img src="../mztkn/images/名侦探柯南.jpg"></h4>
-    <h2><a href="../mztkn/主线1.html">主线篇</a></h2><h3>*黑暗组织</h3>   
-    <h2><a href="../mztkn/基德.html">基德篇</a></h2><h3>*怪盗基德</h3>
-    <h2><a href="../mztkn/平次1.html">平次篇</a></h2><h3>*服部平次</h3>
-    <h2><a href="../mztkn/恐怖.html">恐怖篇</a></h2><h3>*惊悚恐怖</h3>
-    <h2><a href="../mztkn/新一.html">新一篇</a></h2><h3>*工藤新一</h3>
-    <h2><a href="../mztkn/柯哀1.html">柯哀篇</a></h2><h3>*柯哀王道</h3>
-    <h2><a href="../mztkn/剧场版.html">剧场版</a></h2><h3>*电影剧场</h3>
+    <h3>*黑暗组织</h3> <h2><a href="../mztkn/主线1.html">主线篇</a></h2>
+    <h3>*怪盗基德</h3><h2><a href="../mztkn/基德.html">基德篇</a></h2>
+    <h3>*服部平次</h3><h2><a href="../mztkn/平次1.html">平次篇</a></h2>
+    <h3>*惊悚恐怖</h3><h2><a href="../mztkn/恐怖.html">恐怖篇</a></h2>
+    <h3>*工藤新一</h3><h2><a href="../mztkn/新一.html">新一篇</a></h2>
+    <h3>*柯哀王道</h3><h2><a href="../mztkn/柯哀1.html">柯哀篇</a></h2>
+    <h3>*电影剧场</h3><h2><a href="../mztkn/剧场版.html">剧场版</a></h2>
+    <br>
+    <h2><a href="../mztkn/知识.html">名侦探柯南每集都有可怕的知识</a></h2><h3>#第1-500集</h3>
+    <br>
+    <h4>Vermouth:" A secret makes a women women."</h4>
 </body>
 </html>
