--- a/知识.html
+++ b/知识.html
@@ -18,6 +18,7 @@
            margin: 30px;
            border-style: dotted;
            border-radius: 15px;
+           background-color: rgba(226, 225, 225, 0.5);
         }
     </style>
 </head>
