--- a/名侦探柯南.html
+++ b/名侦探柯南.html
@@ -16,26 +16,22 @@
            font-family: sans-serif;
            padding: 25px;
            margin: 30px;
-           text-indent: 2em;
            border-style: dotted;
            border-radius: 15px;
            background-color: rgba(226, 225, 225, 0.5);
         }
-        p,h2 {
+        h1,h2,h3,h4 {
             text-indent: 2em;
         }
         h2 {
             float: left;
-        }
-        h3 {
-            text-indent: 2em;
         }
     </style>
 </head>
 <body>
     <h1>名侦探柯南</h1>
     <p>
-        高中生侦探工藤新一，被称为“日本警察的救世主”、“平成年代的福尔摩斯”。一次在与青梅竹马的女友毛利兰去游乐园游玩时，
+    影片简介：高中生侦探工藤新一，被称为“日本警察的救世主”、“平成年代的福尔摩斯”。一次在与青梅竹马的女友毛利兰去游乐园游玩时，
     发现两个行动诡异的黑衣人。新一跟踪他们直到交易现场，另一个黑衣人趁其不注意从后面将他一棒击倒，并灌下一种名为APTX4869的神秘毒药企图杀他灭口，
     但因为副作用他的身体竟回到发育期的孩童状态。考虑到要是黑衣人知道他还活着的话，将使周围的亲朋好友受到牵连，于是新一化名为“江户川柯南”，
     寄住在毛利兰的家中，想借助其父亲、担任侦探的毛利小五郎的力量来找寻黑衣人。
