--- a/知识.html
+++ b/知识.html
@@ -20,6 +20,9 @@
            border-radius: 15px;
            background-color: rgba(226, 225, 225, 0.5);
         }
+        h1 {
+            text-indent: 2em;
+        }
     </style>
 </head>
 <body>
