--- a/知识.html
+++ b/知识.html
@@ -23,9 +23,22 @@
         h1,h2 {
             text-indent: 2em;
         }
+        #elixirs {
+          border-width: thin;
+          border-style: dotted;
+          border-color: #e9ebeb;
+          width: 500px;
+          padding-right: 20px;
+          padding-bottom: 20px;
+          padding-left: 20px;
+          margin-left: 20px;
+          text-align: center;
+          line-height: normal;
+        }
     </style>
 </head>
 <body>
+  <div id="elixirs">
     <h1>名侦探柯南每集都有可怕的知识</h1>
     <p>第1集：有练过高低杠的人大腿上都会长出独特的茧。
         <br>第2集：衣服前面淋湿，后面却没有，这就是在雨中跑步的证据。
@@ -60,6 +73,7 @@
         <br> 第466集：在雪中撒盐血的凝固点，也就是让写的溶解温度下降撒上演的部分虽然会融化，但融化之前会收集周围的温度，在没有撒盐的地方就会变得坚硬并不止十遍，映在雪中撒盐后搅拌的话盐会分解后持续溶解，然后雪会融化光，同样在以溶解液是用于积雪的道路叫氯化钾。
         <br>
     </p>
+  </div>
     <h2><a href="../mztkn/名侦探柯南.html ">返回</a></h2>
 </body>
 </html>
