--- a/主线2.html
+++ b/主线2.html
@@ -7,7 +7,20 @@
   <title>名侦探柯南</title>
   <link type="text/css" rel="stylesheet" href="../mztkn/名侦探柯南.css">
 </head>
+<style>
+    #a a:link {
+        color: #007e7e;
+    }
+    #a a:visited {
+        color: #4f9ffa;
+    }
+    #a a:hover {
+        background: #f88396;
+        color: #0d5353;
+    }
+</style>
 <body>
+  <div class="elixirs">
   <h1>主线2</h1>
   <img src="../mztkn/images/主线2.jpg">
     <p>第459-463集 黑色冲击！组织之手逼近的瞬间
@@ -38,6 +51,9 @@
       <br>第916-917集 与17年前一样的案发现场
       <br>
     </p>
+    <div id="a"> 
     <h2><a href="../mztkn/主线1.html">上一页</a>   <a href="../mztkn/名侦探柯南.html ">返回</a>   <a href="../mztkn/主线3.html">下一页</a></h2>
+    </div>
+    </div>
 </body>
 </html>
