--- a/基德.html
+++ b/基德.html
@@ -7,7 +7,20 @@
     <title>名侦探柯南</title>
     <link type="text/css" rel="stylesheet" href="../mztkn/名侦探柯南.css">
 </head>
+<style>
+    #a a:link {
+        color: #007e7e;
+    }
+    #a a:visited {
+        color: #4f9ffa;
+    }
+    #a a:hover {
+        background: #f88396;
+        color: #0d5353;
+    }
+</style>
 <body>
+    <div class="elixirs">
     <h1>基德篇</h1>
     <img src="../mztkn/images/基德.jpg">
     <p>第78-79集 柯南对怪盗基德
@@ -23,6 +36,9 @@
         <br>第942-943集 怪盗基德的机关盒
         <br>
     </p>
+    <div id="a"> 
     <h2><a href="../mztkn/名侦探柯南.html ">返回</a></h2>
+    </div>
+    </div>
 </body>
 </html>
