--- a/平次2.html
+++ b/平次2.html
@@ -7,13 +7,29 @@
     <title>名侦探柯南</title>
     <link type="text/css" rel="stylesheet" href="../mztkn/名侦探柯南.css">
 </head>
+<style>
+        #a a:link {
+            color: #007e7e;
+        }
+        #a a:visited {
+            color: #4f9ffa;
+        }
+        #a a:hover {
+            background: #f88396;
+            color: #0d5353;
+        }
+    </style>
 <body>
+    <div class="elixirs">
     <h1>平次篇2</h1>
     <img src="../mztkn/images/平次2.jpg">
     <p>第927-929集 柯南与平次的夜鸟传说
         <br>第940-941集 在白罗咖啡馆解密
         <br>
     </p>
+    <div id="a"> 
     <h2><a href="../mztkn/平次1.html ">上一页</a>   <a href="../mztkn/名侦探柯南.html">下返回</a></h2>
+    </div>
+    </div>
 </body>
 </html>
