--- a/恐怖.html
+++ b/恐怖.html
@@ -7,7 +7,20 @@
     <title>名侦探柯南</title>
     <link type="text/css" rel="stylesheet" href="../mztkn/名侦探柯南.css">
 </head>
+<style>
+        #a a:link {
+            color: #007e7e;
+        }
+        #a a:visited {
+            color: #4f9ffa;
+        }
+        #a a:hover {
+            background: #f88396;
+            color: #0d5353;
+        }
+    </style>
 <body>
+    <div class="elixirs">
     <h1>恐怖篇</h1>
     <img src="../mztkn/images/恐怖.png">
     <p>第11-12集 钢琴奏鸣曲《月光》杀人事件
@@ -35,6 +48,9 @@
         <br>第885-887集 被僵尸包围的别墅
         <br>
     </p>
+    <div id="a"> 
     <h2><a href="../mztkn/名侦探柯南.html ">返回</a></h2>
+    </div>
+    </div>
 </body>
 </html>
