--- a/柯哀2.html
+++ b/柯哀2.html
@@ -7,8 +7,21 @@
   <title>名侦探柯南</title>
   <link type="text/css" rel="stylesheet" href="../mztkn/名侦探柯南.css">
 </head>
+<style>
+    #a a:link {
+        color: #007e7e;
+    }
+    #a a:visited {
+        color: #4f9ffa;
+    }
+    #a a:hover {
+        background: #f88396;
+        color: #0d5353;
+    }
+</style>
 <body>
-  <p>柯哀2</p>
+  <div class="elixirs">
+  <h1>柯哀2</h1>
   <img src="../mztkn/images/柯哀2.png">
   <p>第516-517集 元太的必杀球
     <br>第524-525集 山药婆婆的利刃
@@ -33,6 +46,10 @@
     <br>第914集 漆黑的登山路线
     <br>第924集 消失在断崖上的柯南
     <br>
+    </p>
+    <div id="a"> 
     <h2><a href="../mztkn/柯哀1.html">上一页</a>   <a href="../mztkn/名侦探柯南.html ">返回</a>   <a href="../mztkn/柯哀3.html">下一页</a></h2>
+    </div>
+    </div>
 </body>
 </html>
