--- a/柯哀3.html
+++ b/柯哀3.html
@@ -7,12 +7,28 @@
     <title>名侦探柯南</title>
     <link type="text/css" rel="stylesheet" href="../mztkn/名侦探柯南.css">
 </head>
+<style>
+        #a a:link {
+            color: #007e7e;
+        }
+        #a a:visited {
+            color: #4f9ffa;
+        }
+        #a a:hover {
+            background: #f88396;
+            color: #0d5353;
+        }
+    </style>
 <body>
+    <div class="elixirs">
     <h1>柯哀3</h1>
     <img src="../mztkn/images/柯哀3.png">
     <p>第926集 信长450周年事件
         <br>
     </p>
+    <div id="a"> 
     <h2><a href="../mztkn/柯哀2.html">上一页</a>   <a href="../mztkn/名侦探柯南.html ">返回</a></h2>
+    </div>
+    </div>
 </body>
 </html>
