--- a/知识.html
+++ b/知识.html
@@ -35,6 +35,16 @@
           text-align: center;
           line-height: normal;
         }
+        #a a:link {
+            color: #007e7e;
+        }
+        #a a:visited {
+            color: #4f9ffa;
+        }
+        #a a:hover {
+            background: #f88396;
+            color: #0d5353;
+        }
     </style>
 </head>
 <body>
@@ -73,7 +83,9 @@
         <br> 第466集：在雪中撒盐血的凝固点，也就是让写的溶解温度下降撒上演的部分虽然会融化，但融化之前会收集周围的温度，在没有撒盐的地方就会变得坚硬并不止十遍，映在雪中撒盐后搅拌的话盐会分解后持续溶解，然后雪会融化光，同样在以溶解液是用于积雪的道路叫氯化钾。
         <br>
     </p>
-  </div>
+  <div id="a"> 
     <h2><a href="../mztkn/名侦探柯南.html ">返回</a></h2>
+    </div>
+    </div>
 </body>
 </html>
