--- a/主线1.html
+++ b/主线1.html
@@ -7,7 +7,20 @@
     <title>名侦探柯南</title>
     <link type="text/css" rel="stylesheet" href="../mztkn/名侦探柯南.css">
 </head>
+<style>
+        #a a:link {
+            color: #007e7e;
+        }
+        #a a:visited {
+            color: #4f9ffa;
+        }
+        #a a:hover {
+            background: #f88396;
+            color: #0d5353;
+        }
+    </style>
 <body>
+    <div class="elixirs">
     <h1>主线篇1</h1>
     <img src="../mztkn/images/主线1.jpg">
     <p>第1集 云霄飞车杀人事件
@@ -37,6 +50,9 @@
         <br>第452集 米花町斜顶阁楼之家
         <br>
     </p>
+    <div id="a"> 
     <h2><a href="../mztkn/名侦探柯南.html ">返回</a>   <a href="../mztkn/主线2.html">下一页</a></h2>
+    </div>
+    </div>
 </body>
 </html>
