--- a/主线3.html
+++ b/主线3.html
@@ -7,7 +7,20 @@
     <title>名侦探柯南</title>
     <link type="text/css" rel="stylesheet" href="../mztkn/名侦探柯南.css">
 </head>
+<style>
+        #a a:link {
+            color: #007e7e;
+        }
+        #a a:visited {
+            color: #4f9ffa;
+        }
+        #a a:hover {
+            background: #f88396;
+            color: #0d5353;
+        }
+    </style>
 <body>
+    <div class="elixirs">
     <h1>主线篇3</h1>
     <img src="../mztkn/images/主线3.jpg">
     <p>第918-919集 灵魂侦探凶杀案
@@ -18,6 +31,9 @@
         <br>第949-950集 隔壁的江户式推理秀
         <br>
     </p>
+    <div id="a"> 
     <h2><a href="../mztkn/主线2.html">上一页</a>   <a href="../mztkn/名侦探柯南.html">返回</a></h2>
+    </div>
+    </div>
 </body>
 </html>
