--- a/剧场版.html
+++ b/剧场版.html
@@ -7,7 +7,20 @@
     <title>名侦探柯南</title>
     <link type="text/css" rel="stylesheet" href="../mztkn/名侦探柯南.css">
 </head>
+<style>
+        #a a:link {
+            color: #007e7e;
+        }
+        #a a:visited {
+            color: #4f9ffa;
+        }
+        #a a:hover {
+            background: #f88396;
+            color: #0d5353;
+        }
+    </style>
 <body>
+    <div class="elixirs">
     <h1>剧场版</h1>
     <img src="../mztkn/images/剧场.jpg">
     <p>第1集 计时引爆摩天楼
@@ -37,6 +50,9 @@
         <br>第25集 绀青之拳
         <br>
     </p>
+    <div id="a"> 
     <h2><a href="../mztkn/名侦探柯南.html ">返回</a></h2>
+    </div>
+    </div>
 </body>
 </html>
