--- a/名侦探柯南.html
+++ b/名侦探柯南.html
@@ -26,6 +26,16 @@
         h2 {
             float: left;
         }
+        #a a:link {
+            color: #007e7e;
+        }
+        #a a:visited {
+            color: #4f9ffa;
+        }
+        #a a:hover {
+            background: #f88396;
+            color: #0d5353;
+        }
     </style>
 </head>
 <body>
@@ -36,6 +46,7 @@
     但因为副作用他的身体竟回到发育期的孩童状态。考虑到要是黑衣人知道他还活着的话，将使周围的亲朋好友受到牵连，于是新一化名为“江户川柯南”，
     寄住在毛利兰的家中，想借助其父亲、担任侦探的毛利小五郎的力量来找寻黑衣人。
     </p>
+    <div id="a"> 
     <h3>*黑暗组织</h3> <h2><a href="../mztkn/主线1.html">主线篇</a></h2>
     <h3>*怪盗基德</h3><h2><a href="../mztkn/基德.html">基德篇</a></h2>
     <h3>*服部平次</h3><h2><a href="../mztkn/平次1.html">平次篇</a></h2>
@@ -46,6 +57,7 @@
     <br>
     <h2><a href="../mztkn/知识.html">名侦探柯南每集都有可怕的知识</a></h2><h3>#第1-500集</h3>
     <br>
+    </div>
     <h4>Vermouth:" A secret makes a women women."</h4>
 </body>
 </html>
