--- a/平次1.html
+++ b/平次1.html
@@ -7,7 +7,20 @@
     <title>名侦探柯南</title>
     <link type="text/css" rel="stylesheet" href="../mztkn/名侦探柯南.css">
 </head>
+<style>
+        #a a:link {
+            color: #007e7e;
+        }
+        #a a:visited {
+            color: #4f9ffa;
+        }
+        #a a:hover {
+            background: #f88396;
+            color: #0d5353;
+        }
+    </style>
 <body>
+    <div class="elixirs">
     <h1>平次篇</h1>
     <img src="../mztkn/images/平次1.jpg">
     <p>第49-50集 外交官杀人事件
@@ -37,6 +50,9 @@
         <br>第816-817集 柯南与平次恋爱的暗号
         <br>
     </p>
+    <div id="a"> 
     <h2><a href="../mztkn/名侦探柯南.html ">返回</a>   <a href="../mztkn/平次2.html">下一页</a></h2>
+    </div>
+    </div>
 </body>
 </html>
