--- a/新一.html
+++ b/新一.html
@@ -7,7 +7,20 @@
     <title>名侦探柯南</title>
     <link type="text/css" rel="stylesheet" href="../mztkn/名侦探柯南.css">
 </head>
+<style>
+        #a a:link {
+            color: #007e7e;
+        }
+        #a a:visited {
+            color: #4f9ffa;
+        }
+        #a a:hover {
+            background: #f88396;
+            color: #0d5353;
+        }
+    </style>
 <body>
+    <div class="elixirs">
     <h1>新一篇</h1>
     <img src="../mztkn/images/新一.jpg">
     <p>第49-50集 外交官杀人事件
@@ -27,6 +40,9 @@
         <br>第908-909集 樱花班的回忆
         <br>
     </p>
+    <div id="a"> 
     <h2><a href="../mztkn/名侦探柯南.html ">返回</a></h2>
+    </div>
+    </div>
 </body>
 </html>
