--- a/柯哀1.html
+++ b/柯哀1.html
@@ -7,7 +7,20 @@
     <title>名侦探柯南</title>
     <link type="text/css" rel="stylesheet" href="../mztkn/名侦探柯南.css">
 </head>
+<style>
+        #a a:link {
+            color: #007e7e;
+        }
+        #a a:visited {
+            color: #4f9ffa;
+        }
+        #a a:hover {
+            background: #f88396;
+            color: #0d5353;
+        }
+    </style>
 <body>
+    <div class="elixirs">
     <h1>柯哀1</h1>
     <img src="../mztkn/images/柯哀1.png">
     <p>第140-141集 竞技场一视同仁事件
@@ -37,6 +50,9 @@
         <br>第500集 一年B班大作战
         <br>
     </p>
+    <div id="a"> 
     <h2><a href="../mztkn/名侦探柯南.html ">返回</a>   <a href="../mztkn/柯哀2.html">下一页</a></h2>
+    </div>
+    </div>
 </body>
 </html>
