--- a/知识.html
+++ b/知识.html
@@ -23,11 +23,11 @@
         h1,h2 {
             text-indent: 2em;
         }
-        #elixirs {
+        .elixirs {
           border-width: thin;
           border-style: dotted;
           border-color: #e9ebeb;
-          width: 1300px;
+          width: 600px;
           padding-right: 20px;
           padding-bottom: 20px;
           padding-left: 20px;
@@ -35,20 +35,26 @@
           text-align: center;
           line-height: normal;
         }
-        #a a:link {
+        .a a:link {
             color: #007e7e;
         }
-        #a a:visited {
+        .a a:visited {
             color: #4f9ffa;
         }
-        #a a:hover {
+        .a a:hover {
             background: #f88396;
             color: #0d5353;
         }
+        .cd {
+          width: 600px;
+          float: right;
+
+        }
+
     </style>
 </head>
 <body>
-  <div id="elixirs">
+  <div class="elixirs">
     <h1>名侦探柯南每集都有可怕的知识</h1>
     <p>第1集：有练过高低杠的人大腿上都会长出独特的茧。
         <br>第2集：衣服前面淋湿，后面却没有，这就是在雨中跑步的证据。
@@ -66,6 +72,11 @@
         <br>第96集：乌头碱是能把神经麻痹的一种毒物，是从一种叫三恶根的植物中提取出来的两毫克就足以使人致死，当毒素开始进入体内后，很快便能致命，是强力毒物。
         <br> 第100集：冲进火场救人时要戴上安全帽，这样可以保护脸和头发不被烧伤。
         <br> 第106集：生石灰沾水后会产生高温的热量。
+    </p>
+  </div>
+    <br>
+  <div class="cd">
+    <p>
         <br> 第110集：背部有一个相似被蚊子叮咬的红色斑点，就像是被冰锥刺到背部以后，才留下那样一个斑点。如果那真的是利用冰锥所造成的伤口看起来虽然不严重。但一般来说常常发生刺到肺或者是内脏的例子。如果被刺到胸口痛无法呼吸，如果肺部被刺穿一个洞，即使想呼吸也因为肺部不能膨胀而导致呼吸困难。
         <br> 第190集：氢酸钾中毒死的时候不失去血色，嘴唇和指甲的颜色没有发紫现象，不过呈现为粉红色，再服下之后细胞中的电子传输系统会开始运作，可以在不使用血液中氧气的情况下顺着血液循环全身这么一来气色反而会变得更好，嘴里有杏仁的臭味。
         <br> 第196集：冲击后遗症，也就是说有些人只要长时间跟一些绿色植物在一起，他们就很容易生病，那是因为绿色植物里含有大量的甲醛。
