--- a/知识.html
+++ b/知识.html
@@ -35,25 +35,46 @@
           text-align: center;
           line-height: normal;
         }
-        .a a:link {
+        #a {
+          text-align: center; 
+        }
+        #a a:link {
             color: #007e7e;
         }
-        .a a:visited {
+        #a a:visited {
             color: #4f9ffa;
         }
-        .a a:hover {
+        #a a:hover {
             background: #f88396;
             color: #0d5353;
         }
         .cd {
           width: 600px;
           float: right;
-
         }
-
     </style>
 </head>
 <body>
+    <div class="cd">
+        <p>第110集：背部有一个相似被蚊子叮咬的红色斑点，就像是被冰锥刺到背部以后，才留下那样一个斑点。如果那真的是利用冰锥所造成的伤口看起来虽然不严重。但一般来说常常发生刺到肺或者是内脏的例子。如果被刺到胸口痛无法呼吸，如果肺部被刺穿一个洞，即使想呼吸也因为肺部不能膨胀而导致呼吸困难。
+            <br>第190集：氢酸钾中毒死的时候不失去血色，嘴唇和指甲的颜色没有发紫现象，不过呈现为粉红色，再服下之后细胞中的电子传输系统会开始运作，可以在不使用血液中氧气的情况下顺着血液循环全身这么一来气色反而会变得更好，嘴里有杏仁的臭味。
+            <br> 第196集：冲击后遗症，也就是说有些人只要长时间跟一些绿色植物在一起，他们就很容易生病，那是因为绿色植物里含有大量的甲醛。
+            <br> 第206集：要认罪前的嫌疑犯总是喉咙干渴而伸手拿水，如果这时拿水给他们，他们就会把话喝水以前吞进去。
+            <br>第212集：有些松树变成黄绿色松茸一般都喜欢依附在赤松木的根部吸取养分，所以看起来精神不佳，松业呈现那种颜色的赤松木根部都很有可能，除此之外，这些赤松木在成长过程中必须在日照排水通风都良好的地方才会长得好。在毛巾每隔一段距离间隔不到底的缺口，就能变成长长的绷带了。
+            <br>第219集：伪装他人的能手，连一般人都不太会记得的事情，说不定他也会记得。成功之时通常绝不会放过任何机会的人，因为如果认为机会会再次出现而将他放过，那你再怎么等也等不到。诺米诺试剂只要将它喷在血迹上面，就会因血液中的活性氧而发生氧化反应，于是释放出蓝紫色的荧光。
+            <br> 第315集：竹笋吸收了水分之后加上气温的变暖就会生长的快。
+            <br>第327集：100瓦的灯泡的表面温度是218度。
+            <br> 第332集：拔牙以后一段时间内不能吃刺激性的食物。
+            <br> 第334集：异丙基肾上腺素是诱发神志不清的试验时的药，这是给那些神志不清的患者使用诱发他们的症状以便查清原因的用药。
+            <br> 第349集：漆树，一旦碰到就会中毒发炎。
+            <br> 第356集：戴隐形眼镜的人骑摩托车不带防风镜是相当难受的，风吹到眼睛很痛，而且还会流泪，即便是装有挡风板骑起来也会相当的难受。
+            <br> 第435集：花粉症是抗原，也就是说引起过敏性反应进入体内，对抗抗原的抗体被制造后，积存字数内超过一定量后，抗体和抗原就会发生反应，就会释放出引起过敏的物质，但是被那种抗原的花粉过机，固定在一年的这个时间，所以积存要花很多年月，所以就有了很多孩子提时代没关系，到了二三十岁又有花粉症的事例。
+            <br> 第441集：艾蒿花粉症，艾篙是赤蛱蝶的食物，艾篙对于赤蛱蝶来说是美餐，但对于人类来说就可能会引发花粉症。
+            <br> 第466集：在雪中撒盐血的凝固点，也就是让写的溶解温度下降撒上演的部分虽然会融化，但融化之前会收集周围的温度，在没有撒盐的地方就会变得坚硬并不止十遍，映在雪中撒盐后搅拌的话盐会分解后持续溶解，然后雪会融化光，同样在以溶解液是用于积雪的道路叫氯化钾。
+            <br>
+        </p>
+    </div>
+    <br>
   <div class="elixirs">
     <h1>名侦探柯南每集都有可怕的知识</h1>
     <p>第1集：有练过高低杠的人大腿上都会长出独特的茧。
@@ -74,29 +95,8 @@
         <br> 第106集：生石灰沾水后会产生高温的热量。
     </p>
   </div>
-    <br>
-  <div class="cd">
-    <p>
-        <br> 第110集：背部有一个相似被蚊子叮咬的红色斑点，就像是被冰锥刺到背部以后，才留下那样一个斑点。如果那真的是利用冰锥所造成的伤口看起来虽然不严重。但一般来说常常发生刺到肺或者是内脏的例子。如果被刺到胸口痛无法呼吸，如果肺部被刺穿一个洞，即使想呼吸也因为肺部不能膨胀而导致呼吸困难。
-        <br> 第190集：氢酸钾中毒死的时候不失去血色，嘴唇和指甲的颜色没有发紫现象，不过呈现为粉红色，再服下之后细胞中的电子传输系统会开始运作，可以在不使用血液中氧气的情况下顺着血液循环全身这么一来气色反而会变得更好，嘴里有杏仁的臭味。
-        <br> 第196集：冲击后遗症，也就是说有些人只要长时间跟一些绿色植物在一起，他们就很容易生病，那是因为绿色植物里含有大量的甲醛。
-        <br> 第206集：要认罪前的嫌疑犯总是喉咙干渴而伸手拿水，如果这时拿水给他们，他们就会把话喝水以前吞进去。
-        <br>第212集：有些松树变成黄绿色松茸一般都喜欢依附在赤松木的根部吸取养分，所以看起来精神不佳，松业呈现那种颜色的赤松木根部都很有可能，除此之外，这些赤松木在成长过程中必须在日照排水通风都良好的地方才会长得好。在毛巾每隔一段距离间隔不到底的缺口，就能变成长长的绷带了。
-        <br>第219集：伪装他人的能手，连一般人都不太会记得的事情，说不定他也会记得。成功之时通常绝不会放过任何机会的人，因为如果认为机会会再次出现而将他放过，那你再怎么等也等不到。诺米诺试剂只要将它喷在血迹上面，就会因血液中的活性氧而发生氧化反应，于是释放出蓝紫色的荧光。
-        <br> 第315集：竹笋吸收了水分之后加上气温的变暖就会生长的快。
-        <br>第327集：100瓦的灯泡的表面温度是218度。
-        <br> 第332集：拔牙以后一段时间内不能吃刺激性的食物。
-        <br> 第334集：异丙基肾上腺素是诱发神志不清的试验时的药，这是给那些神志不清的患者使用诱发他们的症状以便查清原因的用药。
-        <br> 第349集：漆树，一旦碰到就会中毒发炎。
-        <br> 第356集：戴隐形眼镜的人骑摩托车不带防风镜是相当难受的，风吹到眼睛很痛，而且还会流泪，即便是装有挡风板骑起来也会相当的难受。
-        <br> 第435集：花粉症是抗原，也就是说引起过敏性反应进入体内，对抗抗原的抗体被制造后，积存字数内超过一定量后，抗体和抗原就会发生反应，就会释放出引起过敏的物质，但是被那种抗原的花粉过机，固定在一年的这个时间，所以积存要花很多年月，所以就有了很多孩子提时代没关系，到了二三十岁又有花粉症的事例。
-        <br> 第441集：艾蒿花粉症，艾篙是赤蛱蝶的食物，艾篙对于赤蛱蝶来说是美餐，但对于人类来说就可能会引发花粉症。
-        <br> 第466集：在雪中撒盐血的凝固点，也就是让写的溶解温度下降撒上演的部分虽然会融化，但融化之前会收集周围的温度，在没有撒盐的地方就会变得坚硬并不止十遍，映在雪中撒盐后搅拌的话盐会分解后持续溶解，然后雪会融化光，同样在以溶解液是用于积雪的道路叫氯化钾。
-        <br>
-    </p>
   <div id="a"> 
-    <h2><a href="../mztkn/名侦探柯南.html ">返回</a></h2>
-    </div>
+      <h2><a href="../mztkn/名侦探柯南.html ">返回</a></h2>
     </div>
 </body>
 </html>
