--- a/知识.html
+++ b/知识.html
@@ -56,43 +56,43 @@
 </head>
 <body>
     <div class="cd">
-        <p>第110集：背部有一个相似被蚊子叮咬的红色斑点，就像是被冰锥刺到背部以后，才留下那样一个斑点。如果那真的是利用冰锥所造成的伤口看起来虽然不严重。但一般来说常常发生刺到肺或者是内脏的例子。如果被刺到胸口痛无法呼吸，如果肺部被刺穿一个洞，即使想呼吸也因为肺部不能膨胀而导致呼吸困难。
-            <br>第190集：氢酸钾中毒死的时候不失去血色，嘴唇和指甲的颜色没有发紫现象，不过呈现为粉红色，再服下之后细胞中的电子传输系统会开始运作，可以在不使用血液中氧气的情况下顺着血液循环全身这么一来气色反而会变得更好，嘴里有杏仁的臭味。
-            <br> 第196集：冲击后遗症，也就是说有些人只要长时间跟一些绿色植物在一起，他们就很容易生病，那是因为绿色植物里含有大量的甲醛。
-            <br> 第206集：要认罪前的嫌疑犯总是喉咙干渴而伸手拿水，如果这时拿水给他们，他们就会把话喝水以前吞进去。
-            <br>第212集：有些松树变成黄绿色松茸一般都喜欢依附在赤松木的根部吸取养分，所以看起来精神不佳，松业呈现那种颜色的赤松木根部都很有可能，除此之外，这些赤松木在成长过程中必须在日照排水通风都良好的地方才会长得好。在毛巾每隔一段距离间隔不到底的缺口，就能变成长长的绷带了。
-            <br>第219集：伪装他人的能手，连一般人都不太会记得的事情，说不定他也会记得。成功之时通常绝不会放过任何机会的人，因为如果认为机会会再次出现而将他放过，那你再怎么等也等不到。诺米诺试剂只要将它喷在血迹上面，就会因血液中的活性氧而发生氧化反应，于是释放出蓝紫色的荧光。
-            <br> 第315集：竹笋吸收了水分之后加上气温的变暖就会生长的快。
-            <br>第327集：100瓦的灯泡的表面温度是218度。
-            <br> 第332集：拔牙以后一段时间内不能吃刺激性的食物。
-            <br> 第334集：异丙基肾上腺素是诱发神志不清的试验时的药，这是给那些神志不清的患者使用诱发他们的症状以便查清原因的用药。
-            <br> 第349集：漆树，一旦碰到就会中毒发炎。
-            <br> 第356集：戴隐形眼镜的人骑摩托车不带防风镜是相当难受的，风吹到眼睛很痛，而且还会流泪，即便是装有挡风板骑起来也会相当的难受。
-            <br> 第435集：花粉症是抗原，也就是说引起过敏性反应进入体内，对抗抗原的抗体被制造后，积存字数内超过一定量后，抗体和抗原就会发生反应，就会释放出引起过敏的物质，但是被那种抗原的花粉过机，固定在一年的这个时间，所以积存要花很多年月，所以就有了很多孩子提时代没关系，到了二三十岁又有花粉症的事例。
-            <br> 第441集：艾蒿花粉症，艾篙是赤蛱蝶的食物，艾篙对于赤蛱蝶来说是美餐，但对于人类来说就可能会引发花粉症。
-            <br> 第466集：在雪中撒盐血的凝固点，也就是让写的溶解温度下降撒上演的部分虽然会融化，但融化之前会收集周围的温度，在没有撒盐的地方就会变得坚硬并不止十遍，映在雪中撒盐后搅拌的话盐会分解后持续溶解，然后雪会融化光，同样在以溶解液是用于积雪的道路叫氯化钾。
+        <p><strong>第110集：</strong>背部有一个相似被蚊子叮咬的红色斑点，就像是被冰锥刺到背部以后，才留下那样一个斑点。如果那真的是利用冰锥所造成的伤口看起来虽然不严重。但一般来说常常发生刺到肺或者是内脏的例子。如果被刺到胸口痛无法呼吸，如果肺部被刺穿一个洞，即使想呼吸也因为肺部不能膨胀而导致呼吸困难。
+            <br><strong>第190集：</strong>氢酸钾中毒死的时候不失去血色，嘴唇和指甲的颜色没有发紫现象，不过呈现为粉红色，再服下之后细胞中的电子传输系统会开始运作，可以在不使用血液中氧气的情况下顺着血液循环全身这么一来气色反而会变得更好，嘴里有杏仁的臭味。
+            <br> <strong>第196集：</strong>冲击后遗症，也就是说有些人只要长时间跟一些绿色植物在一起，他们就很容易生病，那是因为绿色植物里含有大量的甲醛。
+            <br> <strong>第206集：</strong>要认罪前的嫌疑犯总是喉咙干渴而伸手拿水，如果这时拿水给他们，他们就会把话喝水以前吞进去。
+            <br><strong>第212集：</strong>有些松树变成黄绿色松茸一般都喜欢依附在赤松木的根部吸取养分，所以看起来精神不佳，松业呈现那种颜色的赤松木根部都很有可能，除此之外，这些赤松木在成长过程中必须在日照排水通风都良好的地方才会长得好。在毛巾每隔一段距离间隔不到底的缺口，就能变成长长的绷带了。
+            <br><strong>第219集：</strong>伪装他人的能手，连一般人都不太会记得的事情，说不定他也会记得。成功之时通常绝不会放过任何机会的人，因为如果认为机会会再次出现而将他放过，那你再怎么等也等不到。诺米诺试剂只要将它喷在血迹上面，就会因血液中的活性氧而发生氧化反应，于是释放出蓝紫色的荧光。
+            <br> <strong>第315集：</strong>竹笋吸收了水分之后加上气温的变暖就会生长的快。
+            <br><strong>第327集：</strong>100瓦的灯泡的表面温度是218度。
+            <br> <strong>第332集：</strong>拔牙以后一段时间内不能吃刺激性的食物。
+            <br> <strong>第334集：</strong>异丙基肾上腺素是诱发神志不清的试验时的药，这是给那些神志不清的患者使用诱发他们的症状以便查清原因的用药。
+            <br> <strong>第349集：</strong>漆树，一旦碰到就会中毒发炎。
+            <br> <strong>第356集：</strong>戴隐形眼镜的人骑摩托车不带防风镜是相当难受的，风吹到眼睛很痛，而且还会流泪，即便是装有挡风板骑起来也会相当的难受。
+            <br> <strong>第435集：</strong>花粉症是抗原，也就是说引起过敏性反应进入体内，对抗抗原的抗体被制造后，积存字数内超过一定量后，抗体和抗原就会发生反应，就会释放出引起过敏的物质，但是被那种抗原的花粉过机，固定在一年的这个时间，所以积存要花很多年月，所以就有了很多孩子提时代没关系，到了二三十岁又有花粉症的事例。
+            <br> <strong>第441集：</strong>艾蒿花粉症，艾篙是赤蛱蝶的食物，艾篙对于赤蛱蝶来说是美餐，但对于人类来说就可能会引发花粉症。
+            <br> <strong>第466集：</strong>在雪中撒盐血的凝固点，也就是让写的溶解温度下降撒上演的部分虽然会融化，但融化之前会收集周围的温度，在没有撒盐的地方就会变得坚硬并不止十遍，映在雪中撒盐后搅拌的话盐会分解后持续溶解，然后雪会融化光，同样在以溶解液是用于积雪的道路叫氯化钾。
             <br>
         </p>
     </div>
     <br>
   <div class="elixirs">
     <h1>名侦探柯南每集都有可怕的知识</h1>
-    <p>第1集：有练过高低杠的人大腿上都会长出独特的茧。
-        <br>第2集：衣服前面淋湿，后面却没有，这就是在雨中跑步的证据。
-        <br>第7集：外科医生的手指上有一条斜斜的痕迹，担任外科医生在手术的时候，通常会边用两边的食指固定细细的线，一边打结，所以在食指的前端才会留下斜斜的痕迹。
-        <br>第16集：左手有细细的伤痕，就位于手掌的拇指跟食指中间有练习，日本剑道的人把刀收起来的时候，常常会在这个部位受伤。
-        <br> 第18集：氢氧化钠只要拿出来放在空气中，就会迅速吸收水分子，成为液态的剧毒。
-        <br> 第27集：在开枪的时候，子弹和一股高温的热风一起从枪口喷出，如果枪口抵着头不的话，头上会有烧伤的痕迹。
-        <br> 第29集：长毛种的猫最怕温度过热，所以要提供一个具有空调的环境才行。
-        <br> 第33集：把手电筒的头部拆掉，把里面的反射板拿下来，再将火柴放进反射板里，然后把这个正对太阳让它的光线集中，就算是湿的火柴也能点着把短针指向太阳的时候，短针和12点之间1/2的方向就是南方所谓的东方就是在他左边的90度角。
-        <br> 第47集：溺死的人嘴巴和鼻子里都可以看到泡沫，耳朵里有少量出血这是从鼻子和嘴巴里进去的水，对耳造成的压迫的关系 。
-        <br> 第58集：人类死后的三十分钟到两个小时之内就开始僵硬，死后三十个小时之内身体会呈现最硬的状况，然后开始逐渐软化大概七十个小时就会恢复原样尸体周围的温度在三十五度左右，尸体僵硬和软化的速度就会加速进行，只要二十四到三十个小时，死后僵硬就会开始软化。
-        <br> 第71集：有机磷化学物如果是轻微中毒的话，只会让人作呕或流口水而已，如果大量服用的话会出现呼吸困难和脱水症。
-        <br> 第73集：用石头的回声来判断前方的路，如果回声大的话就表示前面是条死路，变小的话就代表前面还有路。
-        <br> 第75集：硫化酸钠可以去除消毒液颜色的漂白技，不但如此也是能够去除氢酸钾毒性的解毒剂，在常温之下还能够反应的一种具有特殊成分的漂白剂。
-        <br>第96集：乌头碱是能把神经麻痹的一种毒物，是从一种叫三恶根的植物中提取出来的两毫克就足以使人致死，当毒素开始进入体内后，很快便能致命，是强力毒物。
-        <br> 第100集：冲进火场救人时要戴上安全帽，这样可以保护脸和头发不被烧伤。
-        <br> 第106集：生石灰沾水后会产生高温的热量。
+    <p><strong>第1集：</strong>有练过高低杠的人大腿上都会长出独特的茧。
+        <br><strong>第2集：</strong>衣服前面淋湿，后面却没有，这就是在雨中跑步的证据。
+        <br><strong>第7集：</strong>外科医生的手指上有一条斜斜的痕迹，担任外科医生在手术的时候，通常会边用两边的食指固定细细的线，一边打结，所以在食指的前端才会留下斜斜的痕迹。
+        <br><strong>第16集：</strong>左手有细细的伤痕，就位于手掌的拇指跟食指中间有练习，日本剑道的人把刀收起来的时候，常常会在这个部位受伤。
+        <br> <strong>第18集：</strong>氢氧化钠只要拿出来放在空气中，就会迅速吸收水分子，成为液态的剧毒。
+        <br> <strong>第27集：</strong>在开枪的时候，子弹和一股高温的热风一起从枪口喷出，如果枪口抵着头不的话，头上会有烧伤的痕迹。
+        <br> <strong>第29集：</strong>长毛种的猫最怕温度过热，所以要提供一个具有空调的环境才行。
+        <br> <strong>第33集：</strong>把手电筒的头部拆掉，把里面的反射板拿下来，再将火柴放进反射板里，然后把这个正对太阳让它的光线集中，就算是湿的火柴也能点着把短针指向太阳的时候，短针和12点之间1/2的方向就是南方所谓的东方就是在他左边的90度角。
+        <br> <strong>第47集：</strong>溺死的人嘴巴和鼻子里都可以看到泡沫，耳朵里有少量出血这是从鼻子和嘴巴里进去的水，对耳造成的压迫的关系 。
+        <br> <strong>第58集：</strong>人类死后的三十分钟到两个小时之内就开始僵硬，死后三十个小时之内身体会呈现最硬的状况，然后开始逐渐软化大概七十个小时就会恢复原样尸体周围的温度在三十五度左右，尸体僵硬和软化的速度就会加速进行，只要二十四到三十个小时，死后僵硬就会开始软化。
+        <br> <strong>第71集：</strong>有机磷化学物如果是轻微中毒的话，只会让人作呕或流口水而已，如果大量服用的话会出现呼吸困难和脱水症。
+        <br> <strong>第73集：</strong>用石头的回声来判断前方的路，如果回声大的话就表示前面是条死路，变小的话就代表前面还有路。
+        <br> <strong>第75集：</strong>硫化酸钠可以去除消毒液颜色的漂白技，不但如此也是能够去除氢酸钾毒性的解毒剂，在常温之下还能够反应的一种具有特殊成分的漂白剂。
+        <br><strong>第96集：</strong>乌头碱是能把神经麻痹的一种毒物，是从一种叫三恶根的植物中提取出来的两毫克就足以使人致死，当毒素开始进入体内后，很快便能致命，是强力毒物。
+        <br> <strong>第100集：</strong>冲进火场救人时要戴上安全帽，这样可以保护脸和头发不被烧伤。
+        <br> <strong>第106集：</strong>生石灰沾水后会产生高温的热量。
     </p>
   </div>
   <div id="a"> 
