--- a/知识.html
+++ b/知识.html
@@ -80,7 +80,7 @@
             <br> <strong>第71集：</strong>有机磷化学物如果是轻微中毒的话，只会让人作呕或流口水而已，如果大量服用的话会出现呼吸困难和脱水症。
             <br> <strong>第73集：</strong>用石头的回声来判断前方的路，如果回声大的话就表示前面是条死路，变小的话就代表前面还有路。
             <br> <strong>第75集：</strong>硫化酸钠可以去除消毒液颜色的漂白技，不但如此也是能够去除氢酸钾毒性的解毒剂，在常温之下还能够反应的一种具有特殊成分的漂白剂。
-            br><strong>第96集：</strong>乌头碱是能把神经麻痹的一种毒物，是从一种叫三恶根的植物中提取出来的两毫克就足以使人致死，当毒素开始进入体内后，很快便能致命，是强力毒物。
+            <br><strong>第96集：</strong>乌头碱是能把神经麻痹的一种毒物，是从一种叫三恶根的植物中提取出来的两毫克就足以使人致死，当毒素开始进入体内后，很快便能致命，是强力毒物。
             <br> <strong>第100集：</strong>冲进火场救人时要戴上安全帽，这样可以保护脸和头发不被烧伤。
             <br> <strong>第106集：</strong>生石灰沾水后会产生高温的热量。
             <strong>第110集：</strong>背部有一个相似被蚊子叮咬的红色斑点，就像是被冰锥刺到背部以后，才留下那样一个斑点。如果那真的是利用冰锥所造成的伤口看起来虽然不严重。但一般来说常常发生刺到肺或者是内脏的例
